--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/keymetrics/pmx.git"
+    "url": "git+https://github.com/goraSi/pm2-pull-reload"
   },
   "config": {
     "interval": 60000
